# ffmpeg

./: .gitattributes  .gitignore  COMPILE  README-vmaf.md  README.md
meta/: COMPILE  IGNORE  ffmpeg-help.txt  ffplay-help.txt  ffprobe-help.txt
sample/audio/: .gitignore  README.md  fft.py
sample/audio/bak/: wav.py
sample/audio/dct/: cos.py  cos3hz.py  dct.py
sample/audio/denoise/: specsub.py
sample/audio/fft/: cos3hz.py  sin40hz_sin90hz.py  sin50hz_sin200hz.py
sample/audio/librosa/: fft.py  requirements.txt
sample/audio/mp3/: input.m4a  setup.sh
sample/audio/stft/: .gitattributes  README.md  amplitude2db.py  audio.py  sin20hz_sin60hz.py  sin20hz_sin60hz_mel.py  sin20hz_sin60hz_mfcc.py  stft.py  winamp-intro.aac
sample/lol/: README.md
sample/mp4/: README.md
sample/tiny/: 2.mov  oceans.ogv  oceans.webm
sample/wrapper/: CMakeLists.txt  Makefile  avcodec.cpp  avcodec.h  avformat.cpp  avformat.h  avformat2.cpp  avformat2.h  avformat_test.cpp  avmedia.cpp  avmedia.h  avmedia_test.cpp  avutil.cpp  avutil.h  main.cpp  media.cpp  media.h  nohup.out  swresample.cpp  swresample.h  swscale.cpp  swscale.h
setup/: env.sh  setup.sh
src/: README.md
src/libmedia/: CMakeLists.txt  Makefile  avcodec.cpp  avformat.cpp  avformat.h  avmanage.cpp  avmanage.h  avmedia.cpp  avmedia.h  avutil.cpp  avutil.h  ffmpeg.cpp  ffmpeg.h  swscale.cpp
src/libmedia/tests/: main.cpp  test_ffmpeg.cpp  test_ffmpeg.h
